# skilltree

./: .drone.yml  .gitignore  .rivetcrypt  Dockerfile  Makefile  README.md  Rivetfile  Vagrantfile  ansible.cfg  cabal.config  defaults.cfg  devel.cfg  fig.yml  prod-sample.cfg  skilltree.cabal  test.cfg
config/: keter.yaml
db/: Dockerfile
docker/: Dockerfile.base  Dockerfile.development  Dockerfile.migrate  Dockerfile.production  run
migrations/: 20140914230625_tutorials.hs  20140915004712_add_dependencies.hs  20140915004824_add_icon_to_tutorial.hs  20140915004919_add_publish_to_tutorial.hs  20140915004952_add_steps.hs  20140915005137_add_videos_to_steps.hs  20140915005218_add_courses.hs  add_courses.txt  add_dependencies.txt  add_icon_to_tutorial.txt  add_publish_to_tutorial.txt  add_steps.txt  add_videos_to_step.txt  tutorial.txt
provisioning/: inventory  native.yml  playbook.yml  secrets.yml  vagrant.yml  web.yml
provisioning/group_vars/: all
provisioning/roles/cabal/tasks/: dependency.yml  download.yml  install.yml
provisioning/roles/development/tasks/: main.yml
provisioning/roles/ghc/tasks/: dependency.yml  install.yml
provisioning/roles/postgresql/tasks/: main.yml
provisioning/roles/production/files/: keter-config.yaml  keter-init
provisioning/roles/production/tasks/: main.yml
provisioning/roles/production/templates/: moo.cfg
provisioning/roles/redis/tasks/: main.yml
provisioning/roles/tarsnap/tasks/: main.yml
provisioning/roles/tarsnap/vars/: main.yml
provisioning/roles/vagrant/tasks/: main.yml
scripts/: crypt.sh  crypt_show.sh
snaplets/heist/templates/: base.tpl  graph.tpl  index.tpl
snaplets/persist/: devel.cfg  prod-sample.cfg  test.cfg
snaplets/postgresql-simple/: devel.cfg  prod-sample.cfg  test.cfg
spec/: Main.hs
src/: Application.hs  Email.hs  FileStore.hs  Forms.hs  Helpers.hs  Main.hs  Site.hs  SnapPrelude.hs  Test.hs  TestRunner.hs
src/Auth/: Form.hs  Forms.hs  Handlers.hs
src/Course/: Form.hs  Handlers.hs  Types.hs
src/Dependency/: Form.hs  Handlers.hs  Queries.hs  Splices.hs  Types.hs
src/Snap/: Plus.hs
src/Snap/Plus/: Forms.hs  Handlers.hs  Paths.hs
src/Step/: Form.hs  Handlers.hs  Splices.hs  Types.hs  VideoType.hs
src/Step/Internal/: Types.hs  VideoType.hs
src/Tutorial/: Form.hs  Handlers.hs  Publish.hs  Queries.hs  Splices.hs  Types.hs
src/Tutorial/Internal/: Publish.hs  Types.hs
src/TutorialWeek/: Types.hs
src/Week/: Handlers.hs  Queries.hs  Types.hs
static/css/: main.css  skilltree.css
static/img/: tutorial-default-icon.ai
static/js/: auth.js  site.js
static/js/libs/: jquery.flexibleArea.min.js
static/js/steps/: move.js
static/js/tutorials/: admin.js  create.js  draw.js
template/provisioning/: id_rsa  id_rsa.pub  inventory  prod.yml  secrets.yml  stage.yml  web.yml
template/provisioning/group_vars/: all
test/: Main.hs
(+21 files in other folders)
