Name:                skilltree
Version:             0.1
Synopsis:
Description:
License:             GPL-3
Author:              Matt Raibert, Daniel Paterson, Dan Taeyoung
Maintainer:          team@positioncoop.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable skilltree
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    bytestring                  >= 0.9.1   && < 0.11,
    heist                       >= 0.13    && < 0.14,
    MonadCatchIO-transformers   >= 0.3.1   && < 0.4,
    mtl                         >= 2       && < 3,
    snap                        >= 0.13    && < 0.14,
    snap-core                   >= 0.9     && < 0.11,
    snap-server                 >= 0.9     && < 0.10,
    snap-loader-static          >= 0.9     && < 0.10,
    text                        >= 0.11    && < 1.2,
    time                        >= 1.1     && < 1.5,
    xmlhtml                     >= 0.1,
    postgresql-simple,
    snaplet-postgresql-simple,
    snaplet-persistent          >= 0.3,
    persistent,
    persistent-template,
    containers,
    digestive-functors          >= 0.7 && < 0.8,
    digestive-functors-snap,
    digestive-functors-heist,
    configurator,
    random,
    amazon-emailer-client-snap  >= 0.1.1.0,
    dns,
    snap-testing                >= 0.6,
    monad-logger,
    resource-pool-catchio,
    snaplet-redis,
    hedis,
    aeson                       >= 0.7 && < 0.8,
    snap-extras                 >= 0.9 && < 0.10,
    base                        >= 4.4      && < 5,
    lens                        >= 4.0      && < 4.4,
    directory,
    filepath,
    resourcet,
    imagesize-conduit           >= 1.0 && < 1.1,
    conduit,
    either,
    transformers,
    unordered-containers,
    esqueleto,
    attoparsec >= 0.11 && < 0.13,
    hspec-webdriver

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
